# WashoutFilter

./: CMakeLists.txt
example/: CMakeLists.txt  SampleFilter.cpp  SampleFilter.h  SampleWashoutFilter.cpp  SampleWashoutFilter.h  main.cpp
src/: CMakeLists.txt  IFilter.h  IWashoutFilter.h  Motion.h  MotionFilter.cpp  MotionFilter.h  Position.h  WashoutFilter.cpp  WashoutFilter.h
