CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(WashoutFilterApp)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

FILE(GLOB_RECURSE HEADER_FILES "*.h")
FILE(GLOB_RECURSE SOURCE_FILES "*.cpp")

ADD_EXECUTABLE(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE WashoutFilter)