CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(WashoutFilter)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

FILE(GLOB_RECURSE HEADER_FILES "*.h")
FILE(GLOB_RECURSE SOURCE_FILES "*.cpp")

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})

TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE WASHOUTFILTER_EXPORTS)